[project]
name = "flern"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.16.1",
    "psycopg==3.2.9",
    "starlette==0.47.0",
    "uvicorn==0.34.3",
]

[tool.mypy]
strict = true
exclude = [".venv"]

[dependency-groups]
dev = [
    "ruff==0.11.13",
    "mypy==1.16.0",
    "pytest>=8.4.0",
]
